# livepaper-rust

./: .gitignore  README.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
backend/src/: main.rs
backend/src/agents/: chat.rs  expert_router.rs  gap_detector.rs  ingestion.rs  mod.rs  response_ingestion.rs  retrieval.rs
backend/src/db/: mod.rs  neo4j.rs  pinecone.rs  postgres.rs
backend/src/handlers/: chat.rs  experts.rs  mod.rs  papers.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs
backend/src/services/: email.rs  embedding.rs  langfuse.rs  llm.rs  mod.rs  pdf.rs
backend/src/tools/: mod.rs
backend/src/utils/: config.rs  errors.rs
frontend/: .env.example  jest.config.js  jest.setup.tsx  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
frontend/components/: AdminNav.tsx  Footer.tsx  ResearchChat.tsx
frontend/hooks/: useBackendSync.ts
frontend/lib/: api.ts
frontend/pages/: _app.tsx  _document.tsx  chat.tsx  dashboard.tsx  expert-response.tsx  experts.tsx  index.tsx
frontend/styles/: globals.css
frontend/tests/: ResearchChat.test.tsx  dashboard.test.tsx  expert-response-and-experts.test.tsx  index.test.tsx
frontend/types/: globals.d.ts
